<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CatDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tDescription"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/picture_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tDescription"
            tools:srcCompat="@tools:sample/avatars[3]" />

        <Button
            android:id="@+id/addToFavourites"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/add_to_favourites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <TextView
            android:id="@+id/description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tDescription" />

        <TextView
            android:id="@+id/tWeight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/weight"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addToFavourites" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tWeight"
            app:layout_constraintTop_toTopOf="@id/tWeight" />

        <TextView
            android:id="@+id/tTemperament"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/temperament"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tWeight" />

        <TextView
            android:id="@+id/temperament"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tTemperament"
            app:layout_constraintTop_toTopOf="@id/tTemperament" />

        <TextView
            android:id="@+id/tOrigin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/origin"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tTemperament" />

        <TextView
            android:id="@+id/origin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tOrigin"
            app:layout_constraintTop_toTopOf="@id/tOrigin" />

        <TextView
            android:id="@+id/tLife_span"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/life_span"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tOrigin" />

        <TextView
            android:id="@+id/life_span"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tLife_span"
            app:layout_constraintTop_toTopOf="@id/tLife_span" />

        <TextView
            android:id="@+id/tWikipedia_url"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/wikipedia_url"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tLife_span" />

        <TextView
            android:id="@+id/wikipedia_url"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="#1D7EC4"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tWikipedia_url"
            app:layout_constraintTop_toBottomOf="@id/tWikipedia_url"
            app:layout_constraintTop_toTopOf="@id/tWikipedia_url" />

        <TextView
            android:id="@+id/tDog_friendly"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/dog_friendly"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tWikipedia_url" />

        <TextView
            android:id="@+id/dog_friendly"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tDog_friendly"
            app:layout_constraintTop_toTopOf="@id/tDog_friendly" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>